--- a/bai1.html
+++ b/bai1.html
@@ -7,15 +7,17 @@
 <body>
 <h1>hien thi hinh sao</h1>
 <script>
-for(let i=0;i<=5;i++){
-    for (let j=0;j<=10;j++){
-        if(i==0 || i==5|| j==0||j==10){
-            document.write('*')
-        }else{
-        document.write("0")}
-    };
-    document.write('<br>')
-}
+    for (let i = 0; i <= 5; i++) {
+        for (let j = 0; j <= 10; j++) {
+            if (i == 0 || i == 5 || j == 0 || j == 10) {
+                document.write('*')
+            } else {
+                document.write("0")
+            }
+        }
+        ;
+        document.write('<br>')
+    }
 </script>
 </body>
 </html>
